# open_smart_speaker

./: CMakeLists.txt  Makefile  README.md  toolchain-arm-none-eabi.cmake
src/: debug_log.cc  error_reporter_shim.cc  main.cpp  model_data.cc  model_data.h  syscalls.c
teensy/: startup.c
